--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "asyncpg>=0.30.0",
     "click>=8.2.1",
+    "fastapi>=0.116.0",
     "orjson>=3.10.18",
     "psycopg2>=2.9.10",
+    "pydantic>=2.11.7",
+    "sqlalchemy[asyncio]>=2.0.41",
+    "uvicorn[standard]>=0.35.0",
 ]
